# budget-app

./: .coveragerc  .env.example  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatiot/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
src/: config.py  index.py
src/database/: database_connection.py  initialize_database.py
src/repositories/: budget_repository.py  user_repository.py
src/services/: budget_service.py
src/tests/: test_budget.py  test_repositories.py
src/ui/: ui.py
